--- a/2_gallery_style.scss
+++ b/2_gallery_style.scss
@@ -6,14 +6,12 @@
     Extend/Inheritance
     Operators */
 
-$font-stack: 'Roboto',
-sans-serif;
+$font-stack: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 $font-accent: 'Roboto Condensed',
-sans-serif;
-$text-color: #b3b3b3;
+    sans-serif;
+$text-color: rgb(55, 53, 47);
 
-$background-color: #000000;
-$test-color-1: #ecbbbb;
+$background-color: #ffffff;
 
 $z-tier5: 100;
 $z-tier4: 50;
@@ -22,15 +20,15 @@ $z-tier2: 10;
 $z-tier1: 5;
 $z-tier0: 0;
 
-$h1-size: 5em;
+$h1-size: 5rem;
 /* gallery title */
-$h2-size: 3em;
+$h2-size: 3rem;
 /* card title */
-$h3-size: 2em;
+$h3-size: 2rem;
 /* gallery support text */
-$h4-size: 1em;
+$h4-size: 1rem;
 /* card support text */
-$p-size: 1.2em;
+$p-size: 1rem;
 
 $duration-text: .8s;
 $duration-image: .7s;
@@ -39,6 +37,8 @@ $bezier: cubic-bezier(0.5, 0.2, 0.15, 1);
 //$bezier: ease-out;
 
 $img-width: 68vw;
+
+
 
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -52,7 +52,13 @@ $img-width: 68vw;
 }
 
 
-
+canvas {
+    z-index: -900;
+    //opacity: .5;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+}
 
 body {
     height: auto;
@@ -64,9 +70,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
 
-
     font-family: $font-stack;
-
     color: $text-color;
     background: $background-color;
 }
@@ -96,9 +100,6 @@ h4 {
     letter-spacing: .25em;
 }
 
-h5 {
-    font-size: $h2-size;
-}
 
 p {
     font-size: $p-size;
@@ -106,289 +107,27 @@ p {
 }
 
 a {
-    color: rgb(125, 190, 255);
-    font-size: #{$h4-size - 0.3};
-    font-family: $font-accent;
-    font-weight: 400;
-    letter-spacing: 0;
-    text-decoration: none;
+    font-size: 1em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    //text-decoration: underline;
+    text-overflow: ellipsis;
+    font-weight: 500;
+    line-height: 1.3;
+    border-bottom: 1px solid rgb(90, 90, 90);
+    width: fit-content;
+    margin: 3px;
+    // box-sizing: border-box;
 }
 
-a:visited {
-    color: rgb(90, 90, 90);
+a ::before {
+    font-family: 'Material Icons';
+    // font-weight: 400;
+    content: "\f8ce";
+    transform: translateY(2px);
+    display: inline-block;
+    padding: 0 0;
 }
 
-#grid {
-    display: grid;
-    grid-template-columns: repeat(12, 6em);
-    grid-template-rows: repeat(7, 6em);
-    align-self: center;
-}
-
-
-
-/* ANNOUNCEMENT */
-/* ANNOUNCEMENT */
-/* ANNOUNCEMENT */
-.lockScrolling {
-    overflow: hidden;
-}
-
-.show {
-    visibility: visible !important;
-    opacity: 1 !important;
-}
-
-.heyThere {
-    visibility: hidden;
-    opacity: 0;
-
-    z-index: $z-tier4+100;
-    position: absolute;
-
-    width: 100vw;
-    height: 100vh;
-
-    color: grey;
-    background: rgb(255, 255, 255);
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.8) 100%);
-
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    overflow: visible;
-
-    transition: opacity 1s $bezier;
-
-    h2 {
-        visibility: inherit !important;
-        opacity: inherit !important;
-    }
-
-    p {
-        visibility: inherit !important;
-        opacity: inherit !important;
-
-        margin: 0 auto;
-        padding: 1em;
-        max-width: 25em;
-    }
-}
-
-.continueBtn {
-    position: relative;
-    color: grey;
-
-    h3 {
-        font-size: 2em;
-        font-family: $font-accent;
-        font-weight: 700;
-        letter-spacing: .15em;
-        font-variant: all-small-caps;
-    }
-
-    svg {
-        position: relative;
-        top: -4.6em;
-        left: -.2em;
-        margin-top: 0;
-        width: 16.5em;
-        height: 3em;
-        overflow: visible;
-
-        rect {
-            width: inherit;
-            height: inherit;
-
-            fill: rgba(255, 255, 255, 0);
-            stroke: grey;
-
-            stroke-width: 0;
-            stroke-dasharray: 8em;
-            stroke-dashoffset: 0;
-
-            transition: all 1s $bezier;
-
-            &:hover {
-                stroke-dasharray: 39em;
-                stroke-width: .2em
-            }
-        }
-    }
-}
-
-/* NAVIGATION HAMBURGER */
-/* NAVIGATION HAMBURGER */
-/* NAVIGATION HAMBURGER */
-nav {
-    height: auto;
-    left: 90vw;
-    top: 10vh;
-    position: absolute;
-    z-index: $z-tier5;
-}
-
-#menuToggle {}
-
-#menuToggle input {
-    display: block;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-
-    cursor: pointer;
-
-    opacity: 0;
-    /* hide this */
-    //z-index: 2; /* and place it over the hamburger */
-    z-index: $z-tier5+10;
-
-    -webkit-touch-callout: none;
-}
-
-/* Just a quick hamburger */
-#menuToggle span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-
-    background: #cdcdcd;
-    border-radius: 3px;
-
-    //z-index: 1;
-    z-index: $z-tier2;
-
-    transform-origin: 4px 0px;
-
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease;
-}
-
-#menuToggle span:first-child {
-    transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-}
-
-/* Transform all the slices of hamburger into a crossmark */
-#menuToggle input:checked~span {
-
-    transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
-}
-
-/* Hide the middle one */
-#menuToggle input:checked~span:nth-last-child(3) {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/* Last one should go the other direction */
-#menuToggle input:checked~span:nth-last-child(2) {
-    transform: rotate(-45deg) translate(0, -1px);
-}
-
-/* Make this absolute positioned at the top left of the screen */
-#menu {
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    top: -19px;
-    left: -14px;
-
-    border-radius: 100%;
-    background-color: whitesmoke;
-    //background-color: rgba(255,255,255,0);
-    //-webkit-font-smoothing: antialiased;
-    /* to stop flickering of text in safari */
-    will-change: transform;
-    transform-origin: center;
-
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-/* And let's slide it in from the left */
-#menuToggle input:checked~div {
-    transform: scale(100);
-    background-color: whitesmoke;
-}
-
-
-.menuItemsContainer {
-    position: absolute;
-    height: 77vh;
-    width: 30em;
-    left: 0vw;
-    padding: 6em;
-
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-
-    visibility: hidden;
-    //z-index: -100;
-    z-index: $z-tier5+1;
-
-    opacity: 0;
-    transition: all .1s $bezier .1s;
-
-    a {
-        color: $text-color;
-        font-size: $h3-size;
-        font-family: $font-accent;
-        font-weight: 400;
-        letter-spacing: .15em;
-        font-variant: all-small-caps;
-        transition: transform .4s cubic-bezier(0, 1, 0.35, 1.5);
-        //padding: 1em;
-    }
-
-    a:hover {
-        transform: rotate3d(0.5, 1, 0, 15deg);
-    }
-}
-
-.menuImgContainer {
-    position: absolute;
-    height: auto;
-    width: 50vw;
-    left: 45vw;
-    top: 17vh;
-
-    visibility: hidden;
-    z-index: $z-tier5+1;
-
-    opacity: 0;
-    transition: all $duration-text+-.65 $bezier .1s !important;
-}
-
-#navImg {
-    //visibility: hidden;
-
-    position: absolute;
-    height: auto;
-    width: 100%;
-
-    z-index: $z-tier5+1;
-    ;
-}
-
-.menuItems-Toggled {
-    visibility: visible;
-    opacity: 1 !important;
-
-    transition: all $duration-text+1 $bezier .3s;
-}
 
 
 /* GALLERY */
@@ -426,16 +165,6 @@ nav {
     transition: clip-path $duration-image $bezier;
 
     will-change: clip-path;
-
-    p {
-        height: 100vh;
-        width: $img-width;
-        object-fit: cover;
-        overflow: hidden;
-
-        filter: brightness(70%);
-        cursor: help;
-    }
 }
 
 .transitionPage {
@@ -452,11 +181,8 @@ nav {
 }
 
 .animateClipPath {
+    //path: closed
     clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%) !important;
-}
-
-.inactiveInitial {
-    opacity: 0;
 }
 
 #top {
@@ -470,6 +196,7 @@ nav {
     left: 32vw;
     top: 0;
 
+    //path: open
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     will-change: clip-path;
 }
@@ -485,6 +212,7 @@ nav {
     left: 32vw;
     top: 0;
 
+    //path: open
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     will-change: clip-path;
 }
@@ -495,82 +223,16 @@ nav {
     object-fit: cover;
     overflow: hidden;
 
-    filter: brightness(70%);
+    //filter: brightness(70%);
     cursor: help;
 }
 
 //text format
 
-.textContainer {
+.projectContainer {
     display: inline-flex;
-
-    .inactiveInitial {
-        opacity: 0;
-    }
-
-    .inactiveFinal {
-        opacity: 0;
-        margin-top: 8px;
-    }
-
-    .galleryText {
-        z-index: $z-tier3;
-
-        position: absolute;
-        margin-right: 25vw;
-        top: 30vh;
-        left: 8vw;
-
-        height: auto;
-        width: auto;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: top;
-
-        transition: opacity $duration-text $bezier;
-    }
-
-    $transition-attr: all;
-    $delay-attr1: all;
-    $delay-attr2: opacity;
-
-    h1 {
-        margin: 0;
-        padding: 0.0em 0 0 -7px;
-        transition: $duration-text $bezier;
-        transition-delay: .6s;
-    }
-
-    h3 {
-        margin: 0;
-        padding: 3em 0 0 0;
-        transition: $duration-text $bezier;
-        transition-delay: 1s;
-    }
-
-    h4 {
-        margin: 0 0 .3em 0;
-        padding-left: 0.3em;
-
-        transition: $duration-text $bezier;
-        transition-delay: .5s;
-    }
-
-    p {
-        margin: 0;
-        padding: 1em 0 0 0;
-        width: 16em;
-        font-size: $p-size;
-
-        transition: $duration-text $bezier;
-        transition-delay: 1.2s;
-    }
-
-    span {
-        transition: $duration-text $bezier;
-        transition-delay: 2s;
-    }
+    flex-direction: column;
+    margin: 8em 0 0 8em;
 }
 
 .colorShift {
@@ -639,7 +301,6 @@ $flexText-width: 60vw;
 
     p {
         margin: 1em 2em 0 0;
-        font-size: 1.3em;
         //width: #{$flexText-width/2};
     }
 
@@ -652,215 +313,6 @@ $flexText-width: 60vw;
         object-fit: contain;
     }
 }
-
-.flexText {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    max-width: 100%;
-}
-
-footer {
-    z-index: $z-tier1;
-    width: 100vw;
-    align-self: center;
-    margin-top: 12em;
-    text-align: center;
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-
-    background-color: #000000;
-
-    h4 {
-        text-align: center;
-    }
-
-}
-
-.mediaLinks {
-    display: flex;
-    justify-content: space-between;
-
-    margin: 0;
-    width: $flexText-width;
-
-    p {
-        font-weight: bold;
-        cursor: pointer;
-    }
-
-    div {
-        height: auto;
-        width: auto;
-        transition: transform .4s cubic-bezier(0, 1, 0.35, 1.5);
-    }
-
-    div:hover {
-        transform: rotate3d(0.5, 1, 0, 25deg);
-    }
-}
-
-
-
-
-/* BUTTONS */
-/* BUTTONS */
-/* BUTTONS */
-/* BUTTONS */
-/* BUTTONS */
-
-$btn-border-color: #ffffff;
-
-$btn-size: 4em;
-$btn-weight-px: 3px;
-
-.circle-btn--container {
-    z-index: $z-tier4;
-    position: absolute;
-    top: 89vh;
-    opacity: .6;
-
-    cursor: pointer;
-
-    &:hover {
-        .circle-btn--outer {
-            transform: translateX(-8px) translateZ(0);
-        }
-
-        .circle-arrow--icon {
-            transform: translateX(-8px);
-        }
-
-        .circle-arrow--bar {
-            transform: scaleX(.55);
-        }
-    }
-}
-
-.left {
-    left: 28vw;
-}
-
-.right {
-    left: 44vw;
-    transform: rotate(180deg);
-}
-
-
-.circle-btn--outer {
-    width: $btn-size;
-    height: $btn-size;
-    border: 0px solid $btn-border-color;
-    border-radius: 50%;
-    transition: transform .7s cubic-bezier(1, 0, .25, 1), opacity .7s cubic-bezier(.5, 0, 0, 1),
-        transform .7s cubic-bezier(.5, 0, 0, 1);
-}
-
-.circle-arrow--icon {
-    position: absolute;
-    top: calc(50% - 4px);
-    left: calc(50% - 4px);
-    width: 75%;
-    height: 8px;
-    transform: translateX(0) translateZ(0);
-    transition: transform .7s cubic-bezier(1, 0, .25, 1);
-    will-change: transform;
-}
-
-.circle-arrow--bar {
-    width: 200px;
-    height: $btn-weight-px;
-    width: 100%;
-    background-color: $btn-border-color;
-    position: absolute;
-    top: $btn-weight-px;
-    transform: translateZ(0);
-    transform-origin: 0 0;
-    transition:
-        transform .7s cubic-bezier(1, 0, .25, 1),
-        opacity .7s cubic-bezier(1, 0, .25, 1);
-    will-change: transform opacity;
-}
-
-$triangleSize: 6px;
-
-.circle-arrow--triangle {
-    border-bottom: solid $triangleSize transparent;
-    border-right: solid $triangleSize transparent;
-    border-left: solid $triangleSize $btn-border-color;
-    border-top: solid $triangleSize $btn-border-color;
-    transform: rotate(-45deg) translateX(-$triangleSize);
-    transform-origin: calc(50% - 6px) 0;
-    transition: .3s ease;
-    width: 0;
-    height: 0;
-}
-
-.btnExpandProj {
-    position: absolute;
-    left: 76vw;
-    top: 86vh;
-    z-index: $z-tier4;
-    color: white;
-
-    h3 {
-        font-size: 2em;
-        font-family: $font-accent;
-        font-weight: 700;
-        letter-spacing: .15em;
-        font-variant: all-small-caps;
-    }
-
-    svg {
-        z-index: $z-tier4;
-
-        position: relative;
-        top: -4.6em;
-        left: -.9em;
-        margin-top: 0;
-        width: 16.5em;
-        height: 3em;
-        overflow: visible;
-
-        rect {
-            width: inherit;
-            height: inherit;
-
-            fill: rgba(255, 255, 255, 0);
-            stroke: white;
-
-            stroke-width: 0;
-            stroke-dasharray: 8em;
-            stroke-dashoffset: 0;
-
-            transition: all 1s $bezier;
-
-            &:hover {
-                stroke-dasharray: 39em;
-                stroke-width: .2em
-            }
-        }
-    }
-}
-
-#about {
-    position: absolute;
-    left: 2vw;
-    top: 90vh;
-    z-index: $z-tier2;
-
-    font-size: $h4-size;
-    font-family: $font-accent;
-    font-weight: 400;
-    letter-spacing: .15em;
-    font-variant: all-small-caps;
-
-
-}
-
-
-
 
 
 
@@ -876,226 +328,4 @@ $triangleSize: 6px;
 
 @media only screen // and (min-device-width: 375px) 
 
-and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-
-    $img-height: 75vh;
-
-    * {
-        //overflow: visible;
-    }
-
-    body {
-        flex-direction: column;
-        background: $background-color;
-    }
-
-    h1 {
-        font-size: #{$h1-size - 2};
-    }
-
-    h2 {
-        font-size: #{$h2-size - 1.5};
-    }
-
-    h3 {
-        font-size: #{$h3-size - .5} !important;
-    }
-
-    p {
-        font-size: #{$h2-size - 2.1};
-    }
-
-    .galleryContainer {
-        height: $img-height;
-        width: 100vw;
-        margin: 0;
-
-        overflow: hidden;
-
-        order: 1;
-    }
-
-    .galleryImg {
-        height: $img-height;
-        width: 100vw;
-
-        filter: brightness(50%) contrast(80%);
-    }
-
-    #top {
-        left: 0;
-    }
-
-    #next {
-        left: 0;
-    }
-
-    .galleryText {
-        top: 16vh !important;
-        left: 0 !important;
-        margin: 0 12vw;
-        width: 18em !important;
-    }
-
-    .textContainer {
-        text-align: center;
-
-        * {
-            transition-delay: 0s !important;
-        }
-
-        h3 {
-            // padding: 1em 0 0 0; //old
-            position: absolute;
-            top: 55vh;
-            left: 33vw;
-        }
-
-        p {
-            width: inherit;
-        }
-    }
-
-    .section-div {
-        height: #{100-$img-height};
-        width: 100vw;
-        margin: 0;
-
-        background: $background-color;
-
-        order: 2;
-    }
-
-
-    /* BUTTONS */
-    /* BUTTONS */
-    /* BUTTONS */
-
-    $btn-size2: 40px;
-
-    .btn--flex {
-        order: 3;
-
-        position: relative;
-        //margin: 0 17.5vw; //old
-        margin: 0 6.5vw; //new
-        //top: #{-(100-$img-height)/1.5};
-        //width: 65vw;
-        top: -18.66667vh; //new, non responsive
-        width: 87vw;
-
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row;
-
-        .btnExpandProj {
-            position: absolute;
-            //top: -11vh;
-            //left: 10vw;
-            top: -17vh; //new, smaller
-            left: 20vw;
-            margin: 0;
-
-            h3 {
-                //font-size
-            }
-
-            svg {
-                top: -3.4em;
-                left: -0.9em;
-                width: 12.5em;
-                height: 2em;
-            }
-        }
-
-        .circle-btn--container {
-            top: 0; //52vh;
-            position: relative;
-
-            .circle-btn--outer {
-                width: $btn-size2;
-                height: $btn-size2;
-            }
-        }
-    }
-
-    .left {
-        left: 0; //5vw;
-    }
-
-    .right {
-        left: 0; //72vw;
-    }
-
-
-    /* CARD LAYOUT */
-    /* CARD LAYOUT */
-    /* CARD LAYOUT */
-
-    $text-margin: 10px;
-
-    .colorShift {
-        height: 100vh;
-        visibility: hidden !important;
-    }
-
-    .flexContainer {
-        h2 {
-            margin: .8em 1.5em;
-            writing-mode: horizontal-tb !important;
-            text-orientation: upright;
-            transform: rotate(0deg);
-        }
-    }
-
-    .card {
-        width: 100vw;
-        flex-direction: column;
-        margin: 0;
-
-        h2 {}
-
-        p {
-            //column-count: 1;
-        }
-
-        .show-desktop {
-            display: none !important;
-        }
-
-        img {
-            order: 1;
-
-            object-fit: contain;
-            height: auto;
-            //width: 100%;
-            align-self: center;
-        }
-    }
-
-    .flexText {
-        padding: 2em;
-        order: 2;
-
-        width: 100%;
-    }
-
-    .section-2 {
-        width: 85vw;
-    }
-
-    #about {
-        //top: 80vh;
-        width: auto;
-        visibility: hidden !important;
-    }
-
-
-}
-
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
-/* PORTRAIT QUERY */
+and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {}
